--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@google/generative-ai": "^0.24.0",
     "axios": "^1.8.2",
     "gapi-script": "^1.2.0",
-    "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.15"
@@ -29,6 +28,9 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "pdfjs-dist": "^4.10.38",
+    "tesseract.js": "^6.0.0",
+    "vite": "^6.2.1",
+    "vite-plugin-static-copy": "^2.3.0"
   }
 }
